--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-beautifulsoup4==4.8.0
-discord.py==0.16.12
 requests==2.22.0
+discord.py==1.2.4
 setuptools==41.0.1
+beautifulsoup4==4.8.1
+discord==1.0.1
